[gd_scene load_steps=2 format=3 uid="uid://cfevpxhpsvbst"]

[ext_resource type="Script" uid="uid://cmrmqtbij7m65" path="res://scripts/Prover.gd" id="1_g0qil"]

[node name="Prover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0qil")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="ConnectWallet" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 15.0
offset_right = 227.0
offset_bottom = 69.0
mouse_default_cursor_shape = 2
text = "Connect Wallet
"

[node name="WalletInfo" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 90.0
offset_right = 227.0
offset_bottom = 144.0
mouse_default_cursor_shape = 2
text = "Wallet Info"

[node name="MintAndDeposit" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 210.0
offset_right = 227.0
offset_bottom = 264.0
mouse_default_cursor_shape = 2
text = "Mint And Deposit"

[node name="WithdrawETH" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 282.0
offset_right = 227.0
offset_bottom = 336.0
mouse_default_cursor_shape = 2
text = "Withdraw ETH"

[node name="BuySeed" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 402.0
offset_right = 227.0
offset_bottom = 456.0
mouse_default_cursor_shape = 2
text = "Buy Seed"

[node name="CalculateHands" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 474.0
offset_right = 227.0
offset_bottom = 528.0
mouse_default_cursor_shape = 2
text = "Get Seed & Hands"

[node name="GetProof" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 546.0
offset_right = 227.0
offset_bottom = 600.0
mouse_default_cursor_shape = 2
text = "Get Proof"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 936.0
offset_top = 244.0
offset_right = 1118.0
offset_bottom = 298.0
mouse_default_cursor_shape = 2
text = "Start Game"

[node name="Raise" type="Button" parent="."]
layout_mode = 0
offset_left = 936.0
offset_top = 316.0
offset_right = 1118.0
offset_bottom = 370.0
mouse_default_cursor_shape = 2
text = "Raise"

[node name="SwapCards" type="Button" parent="."]
layout_mode = 0
offset_left = 936.0
offset_top = 388.0
offset_right = 1118.0
offset_bottom = 442.0
mouse_default_cursor_shape = 2
text = "Swap Cards"

[node name="Fold" type="Button" parent="."]
layout_mode = 0
offset_left = 936.0
offset_top = 460.0
offset_right = 1118.0
offset_bottom = 514.0
mouse_default_cursor_shape = 2
text = "Fold"

[node name="Log" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 373.0
offset_top = 24.0
offset_right = 903.0
offset_bottom = 630.0
editable = false
wrap_mode = 1
